[package]
name = "mikado"
version = "0.2.1"
authors = ["Adam Thibert <adamthibert01@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }

[dependencies]
winapi = { version = "0.3", features = ["minwindef", "windef", "winuser", "libloaderapi", "processthreadsapi", "winbase", "consoleapi"] }
crochet = "0.2"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.5"
anyhow = "1.0"
lazy_static = "1.4"
ureq = { version = "2.6", features = ["json"] }
url = "2.3"
either = { version = "1.8", features = ["serde"] }
num_enum = "0.6"
chrono = "0.4"
kbinxml = { git = "https://github.com/mbilker/kbinxml-rs.git", version = "3.1.0" }
psmap = { git = "https://github.com/mbilker/kbinxml-rs.git", version = "2.0.0" }
psmap_derive = { git = "https://github.com/mbilker/kbinxml-rs.git", version = "2.0.0" }
bytes = "1.4"
dynfmt = { version = "0.1", default-features = false, features = ["curly"] }
